// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataCutsComponent should display Scope, Country and Weight 1`] = `
<pf-data-cuts
  dataCutSelected={[Function EventEmitter]}
  dataCuts={[Function Array]}
  job={[Function Object]}
  matchesMouseEnter={[Function EventEmitter]}
  matchesMouseLeave={[Function EventEmitter]}
  matchesMouseLeaveTimeout={[Function Number]}
  payFactorsCutSelected={[Function EventEmitter]}
>
  <div
    class="data-cuts-container"
  >
    
    
    
    
    
    <table
      class="data-cuts-table"
    >
      <thead>
        <tr>
          <th />
          <th>
            Scope
          </th>
          <th
            class="text-center"
          >
            Country
          </th>
          
          <th
            class="text-center"
          >
            Weight
          </th>
          <th
            class="text-center"
          >
            Base 50th
          </th>
          <th
            class="text-center"
          >
            TCC 50th
          </th>
          
          <th
            class="text-center"
          >
            Matches
          </th>
        </tr>
      </thead>
      <tbody>
        
        
        
        
        <tr>
          <td>
            <input
              type="checkbox"
            />
          </td>
          <td
            class="scope-cell"
          >
             Metropolitan/Big/Large 
          </td>
          <td
            class="text-center"
          >
            USA
          </td>
          <td
            class="text-center"
          >
            Incs (8)
          </td>
          <td
            class="text-center"
          >
            50.5
          </td>
          <td
            class="text-center"
          >
            85.5
          </td>
          <td
            class="text-center"
          >
            
            <span
              class="matches"
            >
               4 
            </span>
          </td>
        </tr>
        
      </tbody>
    </table>
    
    
    
  </div>
</pf-data-cuts>
`;

exports[`DataCutsComponent should handle empty currency fields 1`] = `
<pf-data-cuts
  dataCutSelected={[Function EventEmitter]}
  dataCuts={[Function Array]}
  job={[Function Object]}
  matchesMouseEnter={[Function EventEmitter]}
  matchesMouseLeave={[Function EventEmitter]}
  matchesMouseLeaveTimeout={[Function Number]}
  payFactorsCutSelected={[Function EventEmitter]}
>
  <div
    class="data-cuts-container"
  >
    
    
    
    
    
    <table
      class="data-cuts-table"
    >
      <thead>
        <tr>
          <th />
          <th>
            Scope
          </th>
          <th
            class="text-center"
          >
            Country
          </th>
          
          <th
            class="text-center"
          >
            Weight
          </th>
          <th
            class="text-center"
          >
            Base 50th
          </th>
          <th
            class="text-center"
          >
            TCC 50th
          </th>
          
          <th
            class="text-center"
          >
            Matches
          </th>
        </tr>
      </thead>
      <tbody>
        
        
        
        
        <tr>
          <td>
            <input
              type="checkbox"
            />
          </td>
          <td
            class="scope-cell"
          >
             Metropolitan/Big/Large 
          </td>
          <td
            class="text-center"
          >
            USA
          </td>
          <td
            class="text-center"
          >
            Incs (8)
          </td>
          <td
            class="text-center"
          >
            -
          </td>
          <td
            class="text-center"
          >
            -
          </td>
          <td
            class="text-center"
          >
            
            <span
              class="matches"
            >
               4 
            </span>
          </td>
        </tr>
        
      </tbody>
    </table>
    
    
    
  </div>
</pf-data-cuts>
`;

exports[`DataCutsComponent should show a message when there is no data cuts 1`] = `
<pf-data-cuts
  currencyCode=""
  dataCutSelected={[Function EventEmitter]}
  dataCuts={[Function Array]}
  job={[Function Object]}
  matchesMouseEnter={[Function EventEmitter]}
  matchesMouseLeave={[Function EventEmitter]}
  matchesMouseLeaveTimeout={[Function Number]}
  payFactorsCutSelected={[Function EventEmitter]}
>
  <div
    class="data-cuts-container"
  >
    
    
    
    <div
      class="no-data-cuts-message"
    >
       No data cuts available. Please adjust your filters. 
    </div>
    
    
  </div>
</pf-data-cuts>
`;

exports[`DataCutsComponent should show selected if the data cut has been selected 1`] = `
<pf-data-cuts
  dataCutSelected={[Function EventEmitter]}
  dataCuts={[Function Array]}
  job={[Function Object]}
  matchesMouseEnter={[Function EventEmitter]}
  matchesMouseLeave={[Function EventEmitter]}
  matchesMouseLeaveTimeout={[Function Number]}
  payFactorsCutSelected={[Function EventEmitter]}
>
  <div
    class="data-cuts-container"
  >
    
    
    
    
    
    <table
      class="data-cuts-table"
    >
      <thead>
        <tr>
          <th />
          <th>
            Scope
          </th>
          <th
            class="text-center"
          >
            Country
          </th>
          
          <th
            class="text-center"
          >
            Weight
          </th>
          <th
            class="text-center"
          >
            Base 50th
          </th>
          <th
            class="text-center"
          >
            TCC 50th
          </th>
          
          <th
            class="text-center"
          >
            Matches
          </th>
        </tr>
      </thead>
      <tbody>
        
        
        
        
        <tr
          class="selected"
        >
          <td>
            <input
              type="checkbox"
            />
          </td>
          <td
            class="scope-cell"
          >
             Metropolitan/Big/Large 
          </td>
          <td
            class="text-center"
          >
            USA
          </td>
          <td
            class="text-center"
          >
            Incs (8)
          </td>
          <td
            class="text-center"
          >
            -
          </td>
          <td
            class="text-center"
          >
            -
          </td>
          <td
            class="text-center"
          >
            
            <span
              class="matches"
            >
               4 
            </span>
          </td>
        </tr>
        
      </tbody>
    </table>
    
    
    
  </div>
</pf-data-cuts>
`;

exports[`DataCutsComponent should show the data cut in the proper currency 1`] = `
<pf-data-cuts
  currencyCode={[Function String]}
  dataCutSelected={[Function EventEmitter]}
  dataCuts={[Function Array]}
  job={[Function Object]}
  matchesMouseEnter={[Function EventEmitter]}
  matchesMouseLeave={[Function EventEmitter]}
  matchesMouseLeaveTimeout={[Function Number]}
  payFactorsCutSelected={[Function EventEmitter]}
>
  <div
    class="data-cuts-container"
  >
    
    
    
    
    
    <table
      class="data-cuts-table"
    >
      <thead>
        <tr>
          <th />
          <th>
            Scope
          </th>
          <th
            class="text-center"
          >
            Country
          </th>
          
          <th
            class="text-center"
          >
            Weight
          </th>
          <th
            class="text-center"
          >
            Base 50th
          </th>
          <th
            class="text-center"
          >
            TCC 50th
          </th>
          
          <th
            class="text-center"
          >
            Matches
          </th>
        </tr>
      </thead>
      <tbody>
        
        
        
        
        <tr>
          <td>
            <input
              type="checkbox"
            />
          </td>
          <td
            class="scope-cell"
          >
             Metropolitan/Big/Large 
          </td>
          <td
            class="text-center"
          >
            USA
          </td>
          <td
            class="text-center"
          >
            Incs (8)
          </td>
          <td
            class="text-center"
          >
            50.5
          </td>
          <td
            class="text-center"
          >
            85.5
          </td>
          <td
            class="text-center"
          >
            
            <span
              class="matches"
            >
               4 
            </span>
          </td>
        </tr>
        
      </tbody>
    </table>
    
    
    
  </div>
</pf-data-cuts>
`;
